@@ -4,7 +4,6 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
@@ -15,6 +14,11 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -22,13 +26,15 @@ import static com.logster.SettingsDialog.KEY_EXTENSION;
 
 public class SimpleFileSearch {
 
-    private long timeTakenInSeconds;
-    public SimpleFileSearch(){
+
+    public SimpleFileSearch() {
 
         loadPreference();
     }
+
     private final List<String> indexExtension = new ArrayList<>();
     private static final Logger LOGGER = LogManager.getLogger();
+
     private void loadPreference() {
         String text = SettingsDialog.prefs.get(KEY_EXTENSION, ".log,.txt");
         indexExtension.clear();
@@ -36,54 +42,101 @@ public class SimpleFileSearch {
         LOGGER.info("Indexable extensions: {}", String.join(",", indexExtension));
     }
 
-    public List<SearchResult> search(String filePath,String queryStr, int maxHits) throws Exception{
-        timeTakenInSeconds=0;
-        List<SearchResult> result = new ArrayList<>();
-        Path rootDir= Paths.get(filePath);
-        TextSearchQuery searchQuery = new TextSearchQuery(queryStr);
+    public void search(String filePath, String queryStr, SearchProgressListener listener, SearchController controller) throws Exception {
+        long timeTakenInSeconds;
+
+
+        Path rootDir = Paths.get(filePath);
+        Pattern pattern = Pattern.compile(queryStr);
 
         Instant start = Instant.now();
+        AtomicInteger resultCount = new AtomicInteger(0);
+        AtomicBoolean limitReached = new AtomicBoolean(false);
 
-        try (Stream<Path> paths = Files.walk(rootDir)) {
+        int maxResults = 10000;
+        listener.onSearchStarted();
 
-
-             result = paths.parallel()
-                    .filter(Files::isRegularFile)
-                    .filter(path -> !isIgnored(path))
-                    .filter(path -> !isBinary(path))
-                    .flatMap(path -> searchFile(path, searchQuery).stream())
-                    .collect(Collectors.toList());
+        List<Path> allPaths;
+        try (Stream<Path> stream = Files.walk(Paths.get(filePath))) {
+            allPaths = stream .toList();
         }
+        int batchSize = 100;
+        int allFiles = allPaths.size();
+
+        for (int i = 0; i < allPaths.size(); i += batchSize) {
+
+            if (controller.isCancelled()) break;
+
+            List<Path> batch = allPaths.subList(i, Math.min(i + batchSize, allPaths.size()));
+
+            int finalI = i;
+            batch.parallelStream().forEach(path -> {
+                if (controller.isCancelled()) {
+                    listener.onCancelled();
+                    return;
+                }
+
+                if(!Files.isRegularFile(path)||isIgnored(path)||isBinary(path))return;
+
+                List<SearchResult> results = searchFile(path, pattern);
+                for (SearchResult r : results) {
+                    if (controller.isCancelled()) break;
+                    int count = resultCount.incrementAndGet();
+                    if (count <= maxResults) {
+                        listener.onResultFound(r,allFiles, finalI);
+                    } else {
+                        listener.onCancelled();
+                        controller.cancel();
+                        break;
+                    }
+                }
+            });
+        }
+
+
+
+
 
         Instant end = Instant.now();
         timeTakenInSeconds = Duration.between(start, end).toSeconds();
-        return  result;
+        listener.onSearchCompleted(timeTakenInSeconds);
+
+
     }
-    private static List<SearchResult> searchFile(Path path,TextSearchQuery searchQuery ) {
+
+    private static List<SearchResult> searchFile(Path path, Pattern pattern) {
         List<SearchResult> matches = new ArrayList<>();
         try (BufferedReader br = Files.newBufferedReader(path)) {
             String line;
             int lineNum = 1;
             while ((line = br.readLine()) != null) {
-                boolean match = searchQuery.match(line);
-                if(match){
-                    matches.add(new SearchResult(path.toAbsolutePath().toString(),lineNum,line));
+                Matcher matcher = pattern.matcher(line);
+                if (matcher.find()) {
+                    List<MatchPosition> matchPositions = new ArrayList<>();
+                    do {
+                        matchPositions.add(new MatchPosition(matcher.start(), matcher.end()));
+                    } while (matcher.find());
+                    matches.add(new SearchResult(path.toAbsolutePath().toString(), lineNum, line, matchPositions));
                 }
+
                 lineNum++;
+
             }
         } catch (IOException ignored) {
             // Skip unreadable files
         }
         return matches;
     }
-    private   boolean isIgnored(Path path) {
-        for (String ignore :indexExtension ) {
+
+    private boolean isIgnored(Path path) {
+        for (String ignore : indexExtension) {
             if (path.toString().contains(ignore)) {
                 return false;
             }
         }
         return true;
     }
+
     private static boolean isBinary(Path path) {
         try (InputStream in = Files.newInputStream(path)) {
             byte[] buffer = new byte[512];
@@ -103,7 +156,5 @@ public class SimpleFileSearch {
         }
     }
 
-    public long getTimeTakenInSeconds() {
-        return timeTakenInSeconds;
-    }
+
 }
